--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,15 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@types/next-auth": "^3.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "zod": "^3.25.7"
