--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  ,
+  "prisma:generate": "npx prisma generate --schema ../backend/prisma/schema.prisma"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
